--- a/PostSafety/PostSafety/Storyboards/Admin.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Admin.storyboard
@@ -1344,6 +1344,46 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.92156862750000001" green="0.92156862750000001" blue="0.92156862750000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AnnouncementCell" rowHeight="142" id="Tyc-rG-4md">
+                                        <rect key="frame" x="0.0" y="111" width="375" height="142"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tyc-rG-4md" id="nuY-EH-pGA">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="141.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:45am" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cx6-B3-dbU">
+                                                    <rect key="frame" x="8" y="58" width="82.5" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="82.5" id="hhY-2c-oAw"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Protocol for Near Miss Reports" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E0Z-IV-edc">
+                                                    <rect key="frame" x="99" y="44.5" width="268" height="53"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="January 18th, 2018" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1OR-gD-hdy">
+                                                    <rect key="frame" x="99" y="97.5" width="108" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="E0Z-IV-edc" firstAttribute="centerY" secondItem="nuY-EH-pGA" secondAttribute="centerY" id="H6e-wQ-IBU"/>
+                                                <constraint firstItem="Cx6-B3-dbU" firstAttribute="centerY" secondItem="nuY-EH-pGA" secondAttribute="centerY" id="KQV-CX-Tkx"/>
+                                                <constraint firstItem="Cx6-B3-dbU" firstAttribute="leading" secondItem="nuY-EH-pGA" secondAttribute="leading" constant="8" id="PC6-fE-v1g"/>
+                                                <constraint firstItem="1OR-gD-hdy" firstAttribute="top" secondItem="E0Z-IV-edc" secondAttribute="bottom" id="Y3a-Fk-23l"/>
+                                                <constraint firstItem="E0Z-IV-edc" firstAttribute="leading" secondItem="Cx6-B3-dbU" secondAttribute="trailing" constant="8" id="gVr-k4-oma"/>
+                                                <constraint firstAttribute="trailing" secondItem="E0Z-IV-edc" secondAttribute="trailing" constant="8" id="iTo-GS-Ilg"/>
+                                                <constraint firstItem="1OR-gD-hdy" firstAttribute="leading" secondItem="E0Z-IV-edc" secondAttribute="leading" id="vBB-m5-MqQ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
